force-app/main/default/objects/Project_Task__c/Project_Task__c.object-meta.xml
<!--
    Project_Task__c — Master-Detail child of Project__c

    RELATIONSHIP TYPE: Master-Detail
    ════════════════════════════════
    • sharingModel=ControlledByParent: the task inherits the Project's OWD + sharing
    • Cascade delete: deleting a Project deletes all its Tasks
    • Roll-up summary fields can be defined on the parent (Project__c)
    • The master-detail field (Project__c) is required and cannot be changed after insert
      without special permission

    CONTRAST WITH LOOKUP:
    ═════════════════════
    Lookup          Master-Detail
    ──────────      ─────────────
    Optional        Required (by default)
    No cascade      Cascade delete from parent
    Own OWD         Inherits parent OWD (ControlledByParent)
    No roll-up      Roll-up summary fields on parent
    Parent survives Parent deletion deletes children

    MANY-TO-MANY PATTERN:
    ═════════════════════
    Junction object has two Master-Detail fields pointing to each parent.
    Both parents cascade-delete into the junction. Both define roll-ups.
-->
<CustomObject>
    <description>Task belonging to a Project. Demonstrates Master-Detail relationship, ControlledByParent OWD, validation rules, and roll-up summary field setup.</description>
    <label>Project Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <!-- ControlledByParent — only valid for Master-Detail objects -->
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>