force-app/main/default/objects/Project_Task__c/fields/Effort_Days__c.field-meta.xml
<CustomField>
    <fullName>Effort_Days__c</fullName>
    <label>Effort (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>