force-app/main/default/objects/Project_Task__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <!-- type=MasterDetail creates the parent side of a Master-Detail relationship -->
    <!-- writeRequiresMasterRead=false means users with Edit on the child need Read on parent -->
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <!-- reparentableMasterDetail=false prevents changing the parent after insert -->
    <type>MasterDetail</type>
</CustomField>