force-app/main/default/objects/Project_Task__c/validationRules/Effort_Days_Valid_Range.validationRule-meta.xml
<!--
    VALIDATION RULE: Effort_Days_Valid_Range
    ═════════════════════════════════════════
    Rule: Effort must be between 1 and 365 days (when provided).

    FORMULA FUNCTIONS USED:
    • NOT(ISBLANK(field))  — only fire the rule when the field has a value
    • OR(cond1, cond2)     — logical OR of two conditions
    • &&, ||               — shorthand AND/OR for formulas (equivalent to AND/OR functions)
-->
<ValidationRule>
    <fullName>Effort_Days_Valid_Range</fullName>
    <active>true</active>
    <description>Effort in days must be between 1 and 365 inclusive when a value is entered.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Effort_Days__c)),
    OR(
        Effort_Days__c &lt; 1,
        Effort_Days__c &gt; 365
    )
)</errorConditionFormula>
    <errorDisplayField>Effort_Days__c</errorDisplayField>
    <errorMessage>Effort must be between 1 and 365 days.</errorMessage>
</ValidationRule>